codebox.css
ul.files {
    list-style-type: none;
}
* {
    margin: 0;
    padding: 0;
}
body {
    font-family: "Lucida Grande";
    font-size: 11px;
    font-variant: normal;
    overflow: hidden;
}
.tabs {
    margin-bottom: 4px;
}
.tabs li {
    display: inline-block;
    cursor: pointer;
    background: transparent;
    padding: 4px;
}
.tabs li.selected {
    background: #aaa;
    color: white;
    box-shadow: inset 0 0 4px #000000;
}
.panes .pane {
    display: none;
    overflow: scroll;
}
.panes .pane.selected {
    display: block;
}
.filelist li {
    white-space: nowrap;
    list-style-type: none;
    cursor: pointer;
    padding: 2px 4px;
}
.filelist li.selected {
    color: white;
    background: rgb(110, 177, 227);
}
.filelist li.modified {
    padding-right: 10px;
    position: relative;
}
.filelist li.modified:after {
    content: "";
    display: block;
    width: 8px;
    height: 8px;
    background: rgba(128, 128, 128, 0.5);
    position: absolute;
    right: 4px;
    top: 4px;
    border-radius: 4px;
}
.filelist li .lineno {
    color: #888;
    margin-left: 5px; 
    font-weight: bold;
}
#sidebar {
    background: rgb(217, 222, 229);
    position: absolute;
    width: 149px;
    height: 100%;
    overflow: hidden;
    border-right: 1px solid rgb(180, 180, 180);
}
#editor {
    margin: 0 0 0 150px;
    width: 100%;
    height: 100%;
}
#notification {
    text-align: center;
    position: fixed;
    visibility: hidden;
    width: 200px;
    top: 0;
    left: 50%;
    margin-left: -100px;
    background: rgb(163, 26, 20);
    color: white;
    border-radius: 5px;
    border-color: solid rgb(163, 26, 20);
    border: 1px;
}
#blocker {
    z-index: 99;
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    background: black;
    opacity: 0.4;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}
.popup {
    z-index: 100;
    display: none;
    position: absolute;
    width: 480px;
    height: auto;
    padding: 10px;
    top: 100px;
    left: 50%;
    margin-left: -250px;
    border: 5px solid #ccc;
    background: white;
}
.popup .close {
    position: absolute;
    top: -10px;
    right: -10px;
    cursor: pointer;
    background: #333;
    color: white;
    padding: 5px;
}
.popup label {
    display: block;
    margin: 10px 0;
}
#top {
    padding: 5px;
    background: black;
    color: white;
}
#top h1 {
    font-size: 14px;
    float: left;
}
#top select.branch {
    float: left;
    margin-left: 10px;
}
#top .settings {
    cursor: pointer;
    background: url(/cog.png);
    width: 16px;
    height: 16px;
    float: right;
}

